# mlflow-seml

./: .dockerignore  .dvcignore  .gitignore  Dockerfile  Dockerfile.airflow  Dockerfile.mlflow  Makefile  README.md  app.py  bootstrap_model.py  docker-compose.yml  frontend_backend_decisions.md  golden_test.py  init-db.sql  requirements-airflow.txt  requirements.txt  train.py
.dvc/: config
backend/: Dockerfile  pyproject.toml
backend/app/: airflow_client.py  db.py  main.py  ml_client.py  oov.py  schemas.py  security.py
backend/tests/: test_app.py
dags/: retraining_pipeline.py
data/: .gitignore  ctr_history.csv  current_feedback.csv  current_predictions.csv  medium_articles.csv.dvc  oov_history.csv  reference_predictions.csv
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
mlops_pipeline/: __init__.py  constants.py  data.py  drift.py  pipeline.py
